--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
       href="https://fonts.cdnfonts.com/css/ds-sofachrome?styles=43172"
     />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhjTqddL-wUYI_HkpoOb-fSR-BGhg5kcc"></script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
